Обновлены гиперпараметры в hparams.py: увеличен размер батча до 32 для стабильности attention. В smart_tuner_main.py добавлены функции для отправки уведомлений о перезапусках обучения в Telegram, включая анализ причин и план улучшений. В alert_manager.py реализована функция send_training_restart для уведомлений о перезапусках. Обновлен config.yaml для включения новых уведомлений о перезапусках и умных вмешательствах системы.

--- a/smart_tuner/config.yaml
+++ b/smart_tuner/config.yaml
@@ -81,21 +81,21 @@ training_safety:
 hyperparameter_search_space:
   batch_size:
     type: int
-    min: 8              # Минимум для VRAM
-    max: 16             # Максимум для качества attention
-    default: 12         # Оптимум
+    min: 24             # Минимум для стабильности attention
+    max: 48             # Максимум для качества
+    default: 32         # Оптимум для стабильного обучения
     
   epochs:
     type: int
-    min: 1000           # Минимум для качественного TTS
-    max: 8000           # Максимум для предотвращения переобучения
-    default: 3000       # Оптимальное значение из исследований
+    min: 500            # Минимум для качественного TTS
+    max: 2000           # Максимум для fine-tuning фазы
+    default: 1000       # Оптимальное значение для fine-tuning
     
   learning_rate:
     type: float
-    min: 0.000001       # Минимум из Style-BERT-VITS2
-    max: 0.00005        # Максимум для стабильности
-    default: 0.00001    # Оптимальное значение из XTTS исследований (избегаем научную нотацию)
+    min: 0.00001        # Минимум для стабильности
+    max: 0.0005         # Максимум из современных исследований
+    default: 0.0001     # Оптимальное значение для Tacotron2
     log: true
     
   warmup_steps:
@@ -448,7 +448,9 @@ telegram:
   notifications:
     training_start: true
     training_complete: true
+    training_restart: true        # 🔄 НОВОЕ: Уведомления о перезапусках
     optimization_updates: true
     error_alerts: true
     early_stop: true
-    metrics_summary: true 
+    metrics_summary: true
+    quality_interventions: true   # 🤖 НОВОЕ: Умные вмешательства системы 
