Обновлен скрипт установки install.sh для добавления новых сервисов мониторинга: MLflow UI, Production Real-time Dashboard и Smart Tuner веб-интерфейсы. Изменены порты для TensorBoard и обновлены сообщения о доступных интерфейсах. Также обновлен файл зависимостей requirements.txt для включения необходимых библиотек для веб-мониторинга и дашбордов.

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,4 +54,12 @@ plotly>=5.0.0
 pandas>=1.5.0
 PyYAML>=5.0
 
+# Dashboard и веб-мониторинг зависимости
+flask>=2.0.0
+flask-socketio>=5.0.0
+dash>=2.0.0
+dash-bootstrap-components>=1.0.0
+pynvml>=11.0.0
+optuna-dashboard>=0.15.0
+
 cmaes
